# myflask-on-qpythonplus

./: .pdm.toml  CHANGELOG.md  LICENSE  Procfile  README.md  clock.py  pyproject - 副本.toml  pyproject.toml  pyproject11.toml  requirements-export.txt  requirements.txt  run.py  wsgi.py
myflask/: app.py  db.py  extensions.py  models.py
myflask/api/: views.py
myflask/ccp/: __init__.py  views.py
myflask/ccp/templates/: index.html
myflask/unpc/: views.py
myflask/unpc/templates/: web.html
tests/: test_app.py
unpc/: app.py  db.py  extensions.py  models.py  settings.py
unpc/api/: views.py
unpc/ccp/static/: ccp.css  ccp.js
unpc/ccp/templates/: ccp.html
unpc/mongoapp/: views.py
unpc/web/: views.py
unpc/web/templates/: login.html  web_results.html
