[project]
name = "my-flask-on-oracle-cloud"
version = "0.3.0"
description = ""
authors = [
    {name = "bosbyj", email = "bosbyj@gmail.com"},
]
dependencies = ["gunicorn", "pymongo==3.11.1", "dnspython==2.0.0", "flask-pymongo==2.3.0", "flask==1.1.2", "flask-login==0.5.0", "jieba==0.42.1", "pydantic==1.5.1", "pytest==5.4.2", "sqlitefts==0.5.1"]
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""


[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"


[tool]
[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.pdm.dev-dependencies]
dev = [
    "python-semantic-release~=7.19",
]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version"
]
branch = "main"
